// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiMarkup => ADF Formatters - emphasis should be a emphasis mark if there is no space before _ but it is wrapped in braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should be a emphasis mark if there is not a space after closing _ but it is wrapped in braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
        {
          "text": "text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should be an emphasis mark and not a table if the character is a pipe 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "|",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should detect emphasis mark and ignoring the invalid closing symbol 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis_emphasis",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should detect emphasis mark at beginning of the line 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should detect emphasis mark at end of the input 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should detect emphasis mark at end of the line 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "another line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should detect emphasis mark at in between of the line 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should detect emphasis surrounded by non alphanumeric characters 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a (",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
        {
          "text": ") text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should not be a emphasis mark if it is escaped 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is not a _emphasis_ text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should not be a emphasis mark if surrounded by non-latin characters 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is not a 牛_emphasis_牛 text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should not be a emphasis mark if there is a space after opening _ 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is not a _ emphasis_ text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should not be a emphasis mark if there is a space before closing _ 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is not a _emphasis _ text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should not be a emphasis mark if there is no space before _ 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is not a_emphasis_ text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - emphasis should not be a emphasis mark if there is not a space after closing _ 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is not a _emphasis_text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
